# llm-eval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EVAL.md  README.md  TODO.md  notify.sh  pyproject.toml
.github/workflows/: ci.yml
llm_eval/: __init__.py  __main__.py  cache.py  cli.py  compare.py  dataset.py  evaluator.py  history.py  markdown_report.py  models.py  plugins.py  regression.py  report.py  sdk.py
llm_eval/judge/: __init__.py  base.py
llm_eval/metrics/: __init__.py  answer_correctness.py  answer_relevancy.py  answer_similarity.py  base.py  coherence.py  context_precision.py  context_recall.py  faithfulness.py  format_compliance.py  hallucination.py  toxicity.py
tests/: conftest.py  test_answer_correctness.py  test_answer_relevancy.py  test_answer_similarity.py  test_cache.py  test_cache_cli.py  test_cli.py  test_cli_new_features.py  test_coherence.py  test_compare.py  test_compare_html.py  test_config_extends.py  test_config_schema.py  test_context_precision.py  test_context_recall.py  test_csv_dataset.py  test_dataset.py  test_dataset_cli.py  test_dataset_convert.py  test_dataset_stream.py  test_dataset_validate_metrics.py  test_doctor.py  test_edge_cases.py  test_evaluator.py  test_evaluator_cache_options.py  test_export.py  test_exports_and_typed.py  test_faithfulness.py  test_filter_timeout.py  test_format_compliance.py  test_hallucination.py  test_history.py  test_history_diff.py  test_history_trend.py  test_html_report.py  test_judge.py  test_judge_cache_auth.py  test_junit_report.py  test_main_entry.py  test_markdown_report.py  (+21 more)
